[project]
name = "hn_bot"
version = "0.1.2"
description = "A telegram bot to scrape hacker news, but in a less distracting way than the bots that currently exist."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1"]

[project.config]
tg_api_rate = 3
sleep_time = 10
post_template = "<b>{}</b>\n\n<i>Link: {}</i>\n\nKarma: {}, Comments: {}"
hn_min_karma = 25
hn_min_commens = 0
