[project]
name = "hn_bot"
version = "0.2.0"
description = "A telegram bot to scrape hacker news, but in a less distracting way than the bots that currently exist."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1"]

[project.scripts]
bot = "hn_bot.main:run_bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[hn_bot]
tg_channel_name = "@distraction_free_hacker_news"
tg_api_rate = 3
sleep_time = 600
post_template = "<b>{}</b>\n\n<i>Link: {}</i>\n\nKarma: {}, Comments: {}"
hn_min_karma = 25
hn_min_comments = 0

[tool.ruff.lint]
extend-select = ["I"]
